--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -18,6 +18,7 @@ code {
 }
 
 .bg-image {
+   flex: 0 0 60%;
   background: url('../public/chart.png') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -39,7 +40,7 @@ code {
 
 .form {
   background-color: #00010a;
-  width: 50%;
+  width: 30%;
 }
 
 @media (max-width: 768px) {
@@ -47,4 +48,7 @@ code {
     width: 100%;
     padding: 2rem;
   }
+}
+.Login{
+    background-color:#00010a;
 }
